# CodexPlusPlus

./: .gitignore  About.md  Cargo.toml  README.md  README_EN.md
apps/codex-plus-launcher/src/: main.rs
apps/codex-plus-manager/: package-lock.json  package.json
apps/codex-plus-manager/src/: App.tsx  model-windows.test.ts  model-windows.ts
apps/codex-plus-manager/src-tauri/: Cargo.toml  tauri.conf.json
apps/codex-plus-manager/src-tauri/src/: commands.rs  lib.rs
assets/inject/: renderer-inject.js
crates/codex-plus-core/: Cargo.toml
crates/codex-plus-core/src/: assets.rs  bridge.rs  cdp.rs  launcher.rs  lib.rs  protocol_proxy.rs  relay_config.rs  settings.rs  watcher.rs
crates/codex-plus-core/tests/: cdp_bridge.rs  config_coordinator.rs  protocol_proxy.rs  relay_config.rs  watcher.rs
docs/research/: 01-调研结果.md
scripts/: build-windows.ps1
